--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,50 @@
-version: '3'
+
+version: '3.6'
 services:
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
+  telegraf:
+    image: telegraf
+    container_name: telegraf
     restart: always
-    ports:
-      - '3000:3000'
     volumes:
-      - ./grafana/grafana:/var/lib/grafana
-      - ./grafana/provisioning/:/etc/grafana/provisioning/
-      - ./grafana/dashboards/:/var/lib/grafana/dashboards/
+    - ./telegraf.conf:/etc/telegraf/telegraf.conf:ro
+    depends_on:
+      - influxdb
+    links:
+      - influxdb
+    ports:
+    - '8125:8125'
+
+  influxdb:
+    image: influxdb:1.8-alpine
+    container_name: influxdb
+    restart: always
+    environment:
+      - INFLUXDB_DB=influx
+      - INFLUXDB_ADMIN_USER=admin
+      - INFLUXDB_ADMIN_PASSWORD=admin
+    ports:
+      - '8086:8086'
+    volumes:
+      - influxdb_data:/var/lib/influxdb
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana-server
+    restart: always
     depends_on:
       - influxdb
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
-  influxdb:
-    image: influxdb:latest
-    container_name: influxdb
-    restart: always
+      - GF_INSTALL_PLUGINS=
+    links:
+      - influxdb
     ports:
-      - '8086:8086'
-    environment:
-      - INFLUXDB_DB=telegraf
-      - INFLUXDB_USER=admin
-      - INFLUXDB_PASSWORD=admin
-      - INFLUXDB_ADMIN_ENABLED=true
-
-      - INFLUXDB_ADMIN_USER=admin
-      - INFLUXDB_ADMIN_PASSWORD=admin
-  telegraf:
-    image: telegraf
-    container_name: telegraf
-    restart: always
-    ports:
-      - '57100:57100'
-      - '57500:57500'
-    environment:
-      HOST_PROC: /rootfs/proc
-      HOST_SYS: /rootfs/sys
-      HOST_ETC: /rootfs/etc
+      - '3000:3000'
     volumes:
-     - ./telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-     - /var/run/docker.sock:/var/run/docker.sock:ro
-     - /sys:/rootfs/sys:ro
-     - /proc:/rootfs/proc:ro
-     - /etc:/rootfs/etc:ro
+      - grafana_data:/var/lib/grafana
+      
+volumes:
+  grafana_data: {}
+  influxdb_data: {}
+
